--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -1,5 +1,5 @@
 ---
-sitetitle: Simple Start to Eleventy Site
+sitetitle: CSCI E-114, Web Application Development Using Jamstack
 ---
 <!DOCTYPE html>
 <html lang="en">
