updates through week 08 spring 2024

--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -11,11 +11,13 @@ sitetitle: CSCI E-114, Web Application Development Using Jamstack
 </head>
 <body>
     <header><h1>{{ sitetitle }}</h1></header>
-
     <main>
         <h2>{{ title }} </h2>
         {{ content }}
     </main>
-    <footer><p>This is an example used in the course CSCI E-114</p></footer>
+    <footer>
+        <p>This is a list of resources compiled for CSCI E-114, "Web Application Development using Jamstack"</p>
+        <p>Instructors of CSCI E-114 are Arthur J. Barrett, Larry P. Bouthillier, David P. Heitmeyer, and Michael D. Hilborn</p>
+    </footer>
 </body>
 </html>
